--- a/package.json
+++ b/package.json
@@ -12,8 +12,14 @@
   "author": "Nicolas Vera",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.2.2",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "jest": "^29.3.1"
+    "jest": "^29.3.1",
+    "jsonwebtoken": "^9.0.0",
+    "pg": "^8.8.0",
+    "pg-hstore": "^2.3.4",
+    "sequelize": "^6.28.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.15",
