--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "devDependencies": {
     "@types/express": "^4.17.15",
     "@types/node": "^18.11.18",
+    "@types/sequelize": "^4.28.14",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.9.4"
   }
