--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/express": "^4.17.15",
     "@types/node": "^18.11.18",
     "@types/sequelize": "^4.28.14",
+    "cors": "^2.8.5",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.9.4"
   }
