--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "sequelize": "^6.28.0"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.13",
     "@types/express": "^4.17.15",
     "@types/node": "^18.11.18",
     "@types/sequelize": "^4.28.14",
