--- a/package.json
+++ b/package.json
@@ -22,8 +22,9 @@
     "sequelize": "^6.28.0"
   },
   "devDependencies": {
+    "@tsconfig/node16": "^1.0.3",
     "@types/cors": "^2.8.13",
-    "@types/express": "^4.17.15",
+    "@types/express": "^4.17.17",
     "@types/node": "^18.11.18",
     "@types/sequelize": "^4.28.14",
     "cors": "^2.8.5",
